# CVM-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: ast.cpp  ast.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  main.cpp  opcode.h  parser.cpp  parser.h  token.h  vm.cpp  vm.h
tests/: fibonacci.cvm  scope.cvm
